# Modus

./: .gitignore  NOTICE  README.md  demo_modus.py  diffusers_compat.py  infer.py  pyproject.toml  requirements.txt  train.py
any2any/: any2any_tasks.py  inferencer.py  load_any2any.py
conf/data/: modus_stage1_16mod.yaml  modus_stage2_16mod.yaml
conf/inference/: base.yaml
conf/modalities/: instruction_16mod_stage2.yaml
conf/train/: modus_stage1_16mod.yaml  modus_stage2_16mod.yaml  modus_stage3_16mod.yaml  pretrain_unified_navit.yaml
core/: __init__.py  modality.py  model_registry.py  tokenizer_utils.py
data/: data_utils.py  dataset_base.py  dataset_info.py  parquet_utils.py  transforms.py  vlm_dataset.py
data/bundled_parquet_info/: README.md  blip3o_rgb_caption_depth_normal_det_seg_grounding2_canny_dino_global_clip448_imagebind.json  blip3o_rgb_caption_depth_normal_det_seg_grounding_canny_dino_global_clip448_imagebind.json  blip3o_rgb_caption_depth_normal_det_seg_grounding_canny_dino_global_clip448_imagebind_samseg_samedge_cocodet.json  llava_onevision_vqa.json
data/interleave_datasets/: __init__.py  any2any_dataset.py  interleave_t2i_dataset.py
modeling/: __init__.py  autoencoder.py
modeling/bagel/: __init__.py  _attn_fallback.py  bagel.py  builder.py  modeling_utils.py  qwen2_navit.py  siglip_navit.py
modeling/qwen2/: __init__.py  modeling_qwen2.py
modeling/siglip/: __init__.py
scripts/: inference.sh
scripts/modus_stage1_16mod/: smoke_1node.sh  train.sh
scripts/modus_stage2_16mod/: smoke_1node.sh  train.sh
train/: args.py  fsdp_utils.py  merge_safetensors_stage2.py  online_validation.py  train_utils.py
(+1 files in other folders)
