[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modus"
version = "0.1.0"
description = "MODUS: Decoder-only Any-to-Any Modeling of Diverse Modalities"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "einops>=0.7.0",
    "numpy>=1.24,<2.0",
    "opencv-python-headless>=4.7",
    "pyarrow>=11.0",
    "PyYAML>=6.0",
    "safetensors>=0.4.5",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
    "pillow>=9.3",
    "tqdm>=4.64",
    "transformers>=4.46",
    "accelerate>=0.34",
    "hydra-core>=1.3",
]

# torch / torchvision / flash-attn are intentionally NOT pinned here: they are
# environment-specific (e.g. the HF ZeroGPU base image ships a custom torch and
# has no matching torchvision — the demo is torchvision-free and falls back to
# SDPA when flash-attn is absent). Install the right torch for your platform.

[project.optional-dependencies]
demo = ["gradio==5.12.0", "spaces"]
features = ["fourm"]  # dino/clip/imagebind feature tokenizers (VQVAE decode)

[tool.setuptools]
# Top-level demo entry modules (packages are auto-discovered below, recursively).
py-modules = ["demo_modus", "diffusers_compat", "infer"]
include-package-data = true

[tool.setuptools.packages.find]
# Recurse into subpackages (modeling.bagel, modeling.qwen2, data.interleave_datasets, ...).
include = ["any2any*", "modeling*", "data*", "core*", "conf*", "train*"]

[tool.setuptools.package-data]
"*" = ["**/*.yaml", "**/*.yml", "**/*.json"]
